# vgm-screenshot-embedder

./: .gitignore  README.md  pyproject.toml
src/vgm_screenshot_embedder/: __init__.py  cli.py  embedder.py  image_finder.py  image_picker.py  metadata.py
