[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vgm-screenshot-embedder"
version = "0.1.0"
description = "Embed VGM screenshots into files"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "James Roeder", email = "jmaroeder@gmail.com" }]
license = { text = "MIT" }
dependencies = ["typer>=0.9.0", "mutagen>=1.47", "httpx>=0.27"]

[project.scripts]
vgm-screenshot-embedder = "vgm_screenshot_embedder.cli:app"

[dependency-groups]
dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/vgm_screenshot_embedder"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]
ignore = [
    "E501", # line too long (handled by black)
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.isort]
known-first-party = ["vgm_screenshot_embedder"]
